# mcn-app

./: .env.example  .gitignore  AGENTS.md  README.md  datatap_logs_20260718 (1).xlsx  design-qa.md  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  server.ts  vite.config.ts  对话记录_20260714_16点后.txt
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/admin/: models.py  router.py  schemas.py  service.py
backend/app/api/: router.py
backend/app/artifacts/: backfill.py  models.py  service.py
backend/app/billing/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/brainstorm/: parameters.py  router.py  schemas.py  service.py
backend/app/core/: config.py  errors.py  redaction.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/goals/: __init__.py  context.py  evaluation.py  logs.py  models.py  planner.py  schemas.py  validation.py
backend/app/identity/: __init__.py  brand_profiles.py  dependencies.py  models.py  providers.py  router.py  schemas.py  service.py
backend/app/mcp_gateway/: accounting.py  approved_tools.json  contracts.py  datatap.py  fake.py  models.py  registry.py  service.py  transport.py  validation.py
backend/app/model/: __init__.py  adapter.py  contracts.py  (+9 more)
backend/kol_insight_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/scripts/: create_admin_user.py  dump_tool_catalog.py  evaluate_goal_planner_shadow.py
backend/tests/: conftest.py  test_health.py  test_phase2_migrations.py  test_schema.py
(+325 files in other folders)
